Fix embed overflowing and causing scroll issues

--- a/ui/scss/component/_livestream.scss
+++ b/ui/scss/component/_livestream.scss
@@ -91,6 +91,10 @@ $recent-msg-button__height: 2rem;
   }
 }
 
+.livestream-comment__info {
+  overflow: hidden;
+}
+
 .livestream-comment--superchat {
   + .livestream-comment--superchat {
     margin-bottom: var(--spacing-xxs);
@@ -116,12 +120,8 @@ $recent-msg-button__height: 2rem;
 .livestream-comment__body {
   display: flex;
   align-items: flex-start;
-}
-
-.livestream-comment__body {
-  display: flex;
-  align-items: flex-start;
   margin-left: var(--spacing-s);
+  overflow: hidden;
 
   .channel-thumbnail {
     @include handleChannelGif(2rem);
